--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
 			idToState.set(55, "Wisconsin")
 			idToState.set(56, "Wyoming")
 
-			//this is the line that actually draws the map. all vars and stuff should be above it. only functions should be below it.
+			//this is the line that d_nly draws the map. all vars and stuff should be above it. only functions should be below it.
 			renderMap()
 
 			function zoomed(){
@@ -2003,7 +2003,7 @@
 
 				var x0 = d3.scaleBand()
 					.range([0, width])
-					.domain(data.map((s) => s.key))
+					.domain(data.map(function(d) { return d.key; }))
 					.padding(0.4)
 
 
@@ -2045,36 +2045,42 @@
 
 				barGroups.append('rect')
 					.attr('class', 'bar')
-					.attr('x', (g) => x0(g.key))
-					.attr('y', (g) => y(g.value))
-					.attr('height', (g) => height - y(g.value))
+					.attr("x", function(d) { return x0(d.key); })
+					.attr("y", function(d) { return y(d.value); })
+					.attr("height", function(d) { return height - y(d.value); })
 					.attr('width', x0.bandwidth())
 					.attr('fill', "rgb(0,102,204)")
-					.on('mouseenter', function(actual, i) {
+					.on('mouseenter', function(d_n, i) {
 						d3.select("#barChart").selectAll('.value')
 							.attr('opacity', 0)
 
 						d3.select(this)
 							.transition()
-							.duration(300)
-							.attr('opacity', 0.6)
-							.attr('x', (a) => x0(a.key) - 5)
+							.duration(200)
+							.attr("x", function(d) { return x0(d.key) - 5; })
 							.attr('width', x0.bandwidth() + 10)
+							.style("fill", d3.rgb("rgb(0,102,204)").darker(2))
 
 						barGroups.append('text')
-							.attr('class', 'divergence')
-							.attr('x', (a) => x0(a.key) + x0.bandwidth() / 2)
-							.attr('y', (a) => y(a.value) - 5)
+							.attr('class', 'diff')
+							.attr("x", function(d) { return x0(d.key) + x0.bandwidth() / 2; })
+							.attr("y",function(d) { return y(d.value)-5; })
 							.attr('fill', 'black')
 							.attr('text-anchor', 'middle')
-							.text((a, idx) => {
-								var divergence = (a.value - actual.value).toFixed(1)
+							.text((d_i, idx) => {
+								var diff = (d_i.value - d_n.value).toFixed(1)
 
-								let text = ''
-								if (divergence > 0) text += '+'
-								text += `${divergence}${barLabel}`
-
-								return idx !== i ? text : '';
+								let label = ''
+								if (diff > 0) {
+									label += '+'
+								}
+								label += `${diff}${barLabel}`
+								if (idx !== i){
+									return label;
+								}
+								else{
+									return '';
+								}
 							})
 
 					})
@@ -2084,20 +2090,19 @@
 
 						d3.select(this)
 							.transition()
-							.duration(300)
-							.attr('opacity', 1)
-							.attr('x', (a) => x0(a.key))
+							.duration(200)
+							.attr('x', function(d) { return x0(d.key); })
 							.attr('width', x0.bandwidth())
+							.style("fill", d3.rgb("rgb(0,102,204)"))
 
-						chart.selectAll('#limit').remove()
-						chart.selectAll('.divergence').remove()
+						chart.selectAll('.diff').remove()
 					})
 
 				barGroups.append('text')
 					.style("fill", "black")
 					.attr('class', 'value')
-					.attr('x', (a) => x0(a.key) + x0.bandwidth() / 2)
-					.attr('y', (a) => y(a.value) - 5)
+					.attr("x", function(d) { return x0(d.key) + x0.bandwidth() / 2; })
+					.attr("y",function(d) { return y(d.value)-5; })
 					.attr('text-anchor', 'middle')
 					.text((a) => `${a.value}${barLabel}`)
 
@@ -2331,7 +2336,6 @@
 			    .attr('text-anchor', 'middle')
 			    .text(title)
 
-				//Legend
 				var legend = chart.selectAll(".legend")
 						.data(data[0].values.map(function(d) { return d.key; }))
 						.enter()
@@ -2356,6 +2360,7 @@
 				legend.style("opacity","1");
 
 			}
+
 			function dsPopBarChart(data, fClass) {
 				var idToFClass = selectMapForClass(fClass);
 				var isPercent = true;
@@ -2400,7 +2405,7 @@
 
 				var x0 = d3.scaleBand()
 					.range([0, width])
-					.domain(data.map((s) => s.key))
+					.domain(data.map(function(d) { return d.key; }))
 					.padding(0.4)
 
 
@@ -2436,36 +2441,42 @@
 
 				barGroups.append('rect')
 					.attr('class', 'bar')
-					.attr('x', (g) => x0(g.key))
-					.attr('y', (g) => y(g.value))
-					.attr('height', (g) => height - y(g.value))
+					.attr("x", function(d) { return x0(d.key); })
+					.attr("y", function(d) { return y(d.value); })
+					.attr("height", function(d) { return height - y(d.value); })
 					.attr('width', x0.bandwidth())
 					.attr('fill', "rgb(0,102,204)")
-					.on('mouseenter', function(actual, i) {
+					.on('mouseenter', function(d_n, i) {
 						d3.select("#popBarChart").selectAll('.value')
 							.attr('opacity', 0)
 
 						d3.select(this)
 							.transition()
-							.duration(300)
-							.attr('opacity', 0.6)
-							.attr('x', (a) => x0(a.key) - 5)
+							.duration(200)
+							.attr("x", function(d) { return x0(d.key) - 5; })
 							.attr('width', x0.bandwidth() + 10)
+							.style("fill", d3.rgb("rgb(0,102,204)").darker(2))
 
 						barGroups.append('text')
-							.attr('class', 'divergence')
-							.attr('x', (a) => x0(a.key) + x0.bandwidth() / 2)
-							.attr('y', (a) => y(a.value) - 5)
+							.attr('class', 'diff')
+							.attr("x", function(d) { return x0(d.key) + x0.bandwidth() / 2; })
+							.attr("y",function(d) { return y(d.value)-5; })
 							.attr('fill', 'black')
 							.attr('text-anchor', 'middle')
-							.text((a, idx) => {
-								var divergence = (a.value - actual.value).toFixed(1)
+							.text((d_i, idx) => {
+								var diff = (d_i.value - d_n.value).toFixed(1)
 
-								let text = ''
-								if (divergence > 0) text += '+'
-								text += `${divergence}${barLabel}`
-
-								return idx !== i ? text : '';
+								let label = ''
+								if (diff > 0) {
+									label += '+'
+								}
+								label += `${diff}${barLabel}`
+								if (idx !== i){
+									return label;
+								}
+								else{
+									return '';
+								}
 							})
 
 					})
@@ -2475,20 +2486,19 @@
 
 						d3.select(this)
 							.transition()
-							.duration(300)
-							.attr('opacity', 1)
-							.attr('x', (a) => x0(a.key))
+							.duration(200)
+							.attr('x', function(d) { return x0(d.key); })
 							.attr('width', x0.bandwidth())
+							.style("fill", d3.rgb("rgb(0,102,204)"))
 
-						chart.selectAll('#limit').remove()
-						chart.selectAll('.divergence').remove()
+						chart.selectAll('.diff').remove()
 					})
 
 				barGroups.append('text')
 					.style("fill", "black")
 					.attr('class', 'value')
-					.attr('x', (a) => x0(a.key) + x0.bandwidth() / 2)
-					.attr('y', (a) => y(a.value) - 5)
+					.attr("x", function(d) { return x0(d.key) + x0.bandwidth() / 2; })
+					.attr("y",function(d) { return y(d.value)-5; })
 					.attr('text-anchor', 'middle')
 					.text((a) => `${a.value}${barLabel}`)
 
